--- a/Money-Bunny/src/app/login/login.component.html
+++ b/Money-Bunny/src/app/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+<div class="container d-flex justify-content-center">
+    <div class="row">
+        <div class="col-12 col-sm-12">
+            Login form + udemy chapter authentication
+        </div>
+    </div>
+</div>
