AWS and login update

--- a/Money-Bunny/src/app/app.component.html
+++ b/Money-Bunny/src/app/app.component.html
@@ -1,16 +1,14 @@
 <nav class="navbar hr-bottom">
-    <div class="container justify-content-between">
-        <div class="navbar-brand d-flex align-items-center">
-            <span class="navbar-logo">
-                <a routerLink="/">
-                    <img class="logo" src="assets/images/logo.png" alt="Money Bunny Logo">
-                </a>
-            </span>
-            <span class="navbar-caption ml-1">
-                <a class="text-dark text-decoration-none font-weight-bold nav-text" routerLink="/">Money Bunny</a>
-            </span>
-        </div>
-        <a class="btn mb-button" routerLink="/login">Login / Sign up</a>
+    <div class="navbar-brand d-flex align-items-center mr-0">
+        <span class="navbar-logo">
+            <a routerLink="/">
+                <img class="logo" src="assets/images/logo.png" alt="Money Bunny Logo">
+            </a>
+        </span>
+        <span class="navbar-caption ml-1">
+            <a class="text-dark text-decoration-none font-weight-bold nav-text" routerLink="/">Money Bunny</a>
+        </span>
     </div>
+    <a class="btn mb-button" routerLink="/login">Login / Sign up</a>
 </nav>
 <router-outlet></router-outlet>
