--- a/Money-Bunny/src/app/app.component.html
+++ b/Money-Bunny/src/app/app.component.html
@@ -1,14 +1,30 @@
 <nav class="navbar hr-bottom">
     <div class="navbar-brand d-flex align-items-center mr-0">
-        <span class="navbar-logo">
+        <div class="navbar-logo">
             <a routerLink="/">
                 <img class="logo" src="assets/images/logo.png" alt="Money Bunny Logo">
             </a>
-        </span>
-        <span class="navbar-caption ml-1">
+        </div>
+        <div class="navbar-caption">
             <a class="text-dark text-decoration-none font-weight-bold nav-text" routerLink="/">Money Bunny</a>
-        </span>
+        </div>
     </div>
-    <a class="btn mb-button" routerLink="/login">Login / Sign up</a>
+    <div class="nav-item d-none d-sm-block">
+        <a class="btn mb-button mr-4" *ngIf="route.url.split('?')[0].slice(1) !== 'help'" routerLink="/help" [queryParams]="{page: this.route.url.slice(1)}">Help</a>
+        <a class="btn mb-button" routerLink="/login">Login / Sign up</a>
+    </div>
+    <div class="nav-item dropdown position-static d-block d-sm-none">
+        <a id="navbarDropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor: pointer;">
+            <span class="fa fa-bars" style="font-size: 3rem;"></span>
+        </a>
+        <div class="dropdown-menu w-100 mt-0 shadow p-3 mb-5 bg-white rounded" aria-labelledby="navbarDropdownMenu">
+            <div class="row justify-content-center">
+                <a class="dropdown-item btn mb-button mb-4 w-auto" *ngIf="route.url.split('?')[0].slice(1) !== 'help'" routerLink="/help" [queryParams]="{page: this.route.url.slice(1)}">Help</a>
+            </div>
+            <div class="row justify-content-center">
+                <a class="dropdown-item btn mb-button w-auto" routerLink="/login">Login / Sign up</a>
+            </div>
+        </div>
+    </div>
 </nav>
 <router-outlet></router-outlet>
