bank select and reorg sign up

--- a/Money-Bunny/src/app/bank-select/bank-select.component.html
+++ b/Money-Bunny/src/app/bank-select/bank-select.component.html
@@ -1,1 +1,6 @@
-<p>bank-select works!</p>
+<a class="text-dark text-decoration-none font-weight-bold">Select a partner bank!</a>
+<ul style="list-style-type:none;">
+	<li><a class="btn mb-button">Banca Transilvania</a></li>
+	<li><a class="btn mb-button">BRD</a></li>
+	<li><a class="btn mb-button">Libra Bank</a></li>
+</ul>
