--- a/Money-Bunny/src/app/app.component.html
+++ b/Money-Bunny/src/app/app.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="nav-item d-none d-sm-block">
         <a class="btn mb-button mr-4" *ngIf="route.url.split('?')[0].slice(1) !== 'help'" routerLink="/help" [queryParams]="{page: this.route.url.slice(1)}">Help</a>
-        <a class="btn mb-button" routerLink="/login">Login / Sign up</a>
+        <a class="btn mb-button mr-2" routerLink="/login">Login / Sign up</a>
         <a class="dropdown">
             <a class="btn btn-secondary dropdown-toggle" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{language.viewValue}}</a>
             <div class="dropdown-menu" aria-labelledby="dropdownLang">
@@ -20,6 +20,12 @@
         </a>
     </div>
     <div class="nav-item dropdown position-static d-block d-sm-none">
+        <!-- <a class="dropdown">
+            <a class="btn btn-secondary dropdown-toggle" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{language.viewValue}}</a>
+            <div class="dropdown-menu" aria-labelledby="dropdownLang">
+                <a *ngFor="let lang of languages" class="dropdown-item itemLang" (click)="onUpdateLanguage(lang)">{{lang.viewValue}}</a>
+            </div>
+        </a> -->
         <a id="navbarDropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor: pointer;">
             <span class="fa fa-bars" style="font-size: 3rem;"></span>
         </a>
@@ -30,12 +36,6 @@
             </div>
             <div class="row justify-content-center">
                 <a class="dropdown-item btn mb-button w-auto" routerLink="/login">Login / Sign up</a>
-            </div>
-            <div class="row justify-content-center">
-                <a class="btn btn-secondary dropdown-toggle" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{language.viewValue}}</a>
-                <div class="dropdown-submenu" aria-labelledby="dropdownLang">
-                    <a *ngFor="let lang of languages" class="dropdown-item itemLang" (click)="onUpdateLanguage(lang)">{{lang.viewValue}}</a>
-                </div>
             </div>
         </div>
     </div>
