--- a/Money-Bunny/src/app/login/login.component.html
+++ b/Money-Bunny/src/app/login/login.component.html
@@ -17,8 +17,7 @@
                     </div>
                 </div>
 
-                <button type="submit" class="btn btn-block mb-2 input-style mb-button"
-                    routerLink="/logged-in-menu">Login</button>
+                <button type="submit" class="btn btn-block mb-2 input-style mb-button">Login</button>
               
                 <div class="text-center">
                     <a href="#" class="input-style">Forgot password?</a><br>
