a basic form for bank select

--- a/Money-Bunny/src/app/bank-select/bank-select.component.css
+++ b/Money-Bunny/src/app/bank-select/bank-select.component.css
@@ -13,6 +13,19 @@
     background-color: white; 
 }
 
+.btn-primary {
+	border-color: #91E542;
+    font-size: 1.25rem;
+    color: #142305;
+    font-weight: 600;
+    background-color: #91E542;
+}
+
+.btn-primary:hover {
+	color: white;
+    background-color: #66b719;
+}
+
 .font-1p3rem {
     font-size: 1.3rem;
 }
