--- a/Money-Bunny/src/app/app.component.html
+++ b/Money-Bunny/src/app/app.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="nav-item d-none d-sm-block">
         <a class="btn mb-button mr-4" *ngIf="route.url.split('?')[0].slice(1) !== 'help'" routerLink="/help" [queryParams]="{page: this.route.url.slice(1)}">Help</a>
-        <a class="btn mb-button mr-2" routerLink="/login">Login / Sign up</a>
+        <a class="btn mb-button mr-2" *ngIf="route.url.split('?')[0].slice(1) !== 'logged-in-menu'" routerLink="/login">Login / Sign up</a>
         <a class="dropdown">
             <a class="btn btn-secondary dropdown-toggle" id="dropdownLang" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{language.viewValue}}</a>
             <div class="dropdown-menu" aria-labelledby="dropdownLang">
@@ -35,7 +35,7 @@
                 <a class="dropdown-item btn mb-button mb-4 w-auto" *ngIf="route.url.split('?')[0].slice(1) !== 'help'" routerLink="/help" [queryParams]="{page: this.route.url.slice(1)}">Help</a>
             </div>
             <div class="row justify-content-center">
-                <a class="dropdown-item btn mb-button w-auto" routerLink="/login">Login / Sign up</a>
+                <a class="dropdown-item btn mb-button w-auto" *ngIf="route.url.split('?')[0].slice(1) !== 'logged-in-menu'" routerLink="/login">Login / Sign up</a>
             </div>
         </div>
     </div>
