bank select form update

--- a/Money-Bunny/src/app/bank-select/bank-select.component.css
+++ b/Money-Bunny/src/app/bank-select/bank-select.component.css
@@ -21,7 +21,9 @@
     background-color: #91E542;
 }
 
-.btn-primary:hover {
+.btn-primary:hover,
+.btn-primary:active,
+.btn-primary:focus {
 	color: white;
     background-color: #66b719;
 }
