--- a/Money-Bunny/src/app/bank-select/bank-select.component.html
+++ b/Money-Bunny/src/app/bank-select/bank-select.component.html
@@ -32,13 +32,16 @@
 						</div>
 					</div>
 				</div>
+				<br>
+				<input type="email" id="email" class="form-control p-3 input-style" placeholder="Email" required>
 			</div>
 			<div class="form-group">
 				<div class="form-outline mb-4">
 					<select (input)="setAccount($event)" class="form-control input-style" placeholder="User Type" id="usertype" required>
 						<option value="" disabled selected>Account Type</option>
-						<option value="debit">Debit</option>
-						<option value="credit">Credit</option>
+						<option value="checking">Checking</option><!--cont curent-->
+						<option value="savings">Savings</option><!--cont de economii-->
+						<option value="CD">Certificate of deposit</option><!--depozit-->
 					</select>
 					<br>
 					<select (input)="setCurrency($event)" class="form-control input-style" placeholder="User Type" id="usertype" required>
