--- a/Money-Bunny/src/app/home/home.component.html
+++ b/Money-Bunny/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
     <div class="row">
         <div class="col-sm-12">
-            <div class="font-weight-bold display-4 text-center">Welcome to Money Bunny</div>
+            <div class="font-weight-bold display-4 text-center font-title">Welcome to Money Bunny</div>
         </div>
     </div>
     <div class="row mt-2">
@@ -11,33 +11,33 @@
     </div>
 </div>
 
-<div class="col-xs-12" style="margin-top: 14rem;">
-    <div class="font-weight-bold display-4 text-center">All your accounts in one place!</div>
+<div class="col-xs-12" style="margin-top: 5rem;">
+    <div class="font-weight-bold display-4 text-center font-subtitle">All your accounts in one place!</div>
 </div>
 
 <div class="row text-center mx-3 mt-5">
     <div class="col-6 col-sm my-3">
         <span class="fa fa-dollar mb-color icon mb-3"></span><br>
-        <span class="font-weight-bold font-1p3rem">View account balance</span>
+        <span class="font-weight-bold font-item">View account balance</span>
     </div>
     <div class="col-6 col-sm my-3">
         <span class="fa fa-calendar mb-color icon mb-3"></span><br>
-        <span class="font-weight-bold font-1p3rem">Schedule online payments</span>
+        <span class="font-weight-bold font-item">Schedule online payments</span>
     </div>
     <div class="col-6 col-sm my-3">
         <span class="fa fa-download mb-color icon mb-3"></span><br>
-        <span class="font-weight-bold font-1p3rem">Download payment history</span>
+        <span class="font-weight-bold font-item">Download payment history</span>
     </div>
     <div class="col-6 col-sm my-3">
         <span class="fa fa-shield mb-color icon mb-3"></span><br>
-        <span class="font-weight-bold font-1p3rem">Secure online transactions</span>
+        <span class="font-weight-bold font-item">Secure online transactions</span>
     </div>
     <div class="col-6 col-sm my-3">
         <span class="fa fa-file mb-color icon mb-3"></span><br>
-        <span class="font-weight-bold font-1p3rem">Open new accounts</span>
+        <span class="font-weight-bold font-item">Open new accounts</span>
     </div>
     <div class="col-6 col-sm my-3">
         <span class="fa fa-lock mb-color icon mb-3"></span><br>
-        <span class="font-weight-bold font-1p3rem">Block cards or close accounts</span>
+        <span class="font-weight-bold font-item">Block cards or close accounts</span>
     </div>
 </div>
