--- a/Money-Bunny/src/app/login/login.component.html
+++ b/Money-Bunny/src/app/login/login.component.html
@@ -3,11 +3,11 @@
         <div class="col-12 col-sm-12">
             <form (ngSubmit)="onSubmit()">
                 <div class="form-outline mb-4">
-                    <input type="text" id="username" class="form-control p-3 input-style" placeholder="Username">
+                    <input type="text" id="username" class="form-control p-3 input-style" placeholder="Username" required>
                 </div>
               
                 <div class="form-outline mb-3">
-                    <input type="password" id="password" class="form-control p-3 input-style" placeholder="Password">
+                    <input type="password" id="password" class="form-control p-3 input-style" placeholder="Password" required>
                 </div>
               
                 <div class="row justify-content-center input-style">
