--- a/Money-Bunny/src/app/register/register.component.html
+++ b/Money-Bunny/src/app/register/register.component.html
@@ -7,12 +7,14 @@
                 <div class="row justify-content-between">
                     <div class="col-12 col-sm-4">
                         <div class="form-outline mb-4">
-                            <input type="email" id="email" class="form-control p-3 input-style" placeholder="Email" required>
+                            <input type="email" class="form-control p-3 input-style" placeholder="Email"
+                                name="email" [(ngModel)]="newUser.email" required>
                         </div>
                     </div>
                     <div class="col-12 col-sm-4">
                         <div class="form-outline mb-4">
-                            <select (input)="setUser($event)" class="form-control input-style" placeholder="User Type" id="usertype" required>
+                            <select (input)="setUserType($event)" class="form-control input-style" placeholder="User Type"
+                                name="usertype" [(ngModel)]="newUser.userType" required>
                                 <option value="" disabled selected>User Type</option>
                                 <option value="pfizica">Persoana Fizica</option>
                                 <option value="pjuridica">Procesator - Persoana Juridica</option>
@@ -21,26 +23,31 @@
                     </div>
                 </div>
                 <div class="row justify-content-between">
-                    <div class="form-outline mb-4" [ngClass]="{'col-sm-6': userType === 'pjuridica'}">
-                        <div class="form-outline" [ngClass]="{'mb-3': userType === 'pjuridica'}">
-                            <input *ngIf="userType === 'pjuridica'" type="text" id="numefirma" class="form-control p-3 input-style" placeholder="Company Name" [required]="userType === 'pjuridica'">
+                    <div class="form-outline mb-4" [ngClass]="{'col-sm-6': newUser.userType === 'pjuridica'}">
+                        <div class="form-outline" [ngClass]="{'mb-3': newUser.userType === 'pjuridica'}">
+                            <input *ngIf="newUser.userType === 'pjuridica'" type="text" class="form-control p-3 input-style"
+                                placeholder="Company Name"
+                                name="company" [(ngModel)]="newUser.companyName" [required]="newUser.userType === 'pjuridica'">
                         </div>
                     </div>
                 </div>
                 <div class="row justify-content-between">
                     <div class="col-12 col-sm-4">
                         <div class="form-outline mb-4">
-                            <input type="text" id="username" class="form-control p-3 input-style" placeholder="Username" required>
+                           <input type="text" class="form-control p-3 input-style" placeholder="Username"
+                                name="username" [(ngModel)]="newUser.username" required>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6">
                         <div class="form-outline mb-3">
-                            <input type="password" id="password" class="form-control p-3 input-style" placeholder="Password">
+                            <input type="password" class="form-control p-3 input-style" placeholder="Password"
+                                name="password" [(ngModel)]="newUser.password" required>
                         </div>
                     </div>
                     <div class="col-12 col-sm-6">
                         <div class="form-outline mb-3">
-                            <input type="password" id="password" class="form-control p-3 input-style" placeholder="Retype Password">
+                            <input type="password" class="form-control p-3 input-style" placeholder="Retype Password"
+                                name="passwordCheck" [(ngModel)]="passCheck" required>
                         </div>
                     </div>
                 </div>
@@ -51,22 +58,26 @@
                 <div class="row justify-content-between">
                     <div class="col-12 col-sm-4">
                         <div class="form-outline mb-4">
-                            <input type="text" id="name" class="form-control p-3 input-style" placeholder="Full Name" required>
+                            <input type="text" class="form-control p-3 input-style" placeholder="Full Name"
+                                name="name" [(ngModel)]="newUser.name" required>
                         </div>
                     </div>
                     <div class="col-12 col-sm-4">
                         <div class="form-outline mb-4">
-                            <input type="text" id="cnp" pattern="[1-2][0-9]{12}" class="form-control p-3 input-style" placeholder="CNP" required>
+                            <input type="text" pattern="[1-8][0-9]{12}" class="form-control p-3 input-style" placeholder="CNP"
+                                name="cnp" [(ngModel)]="newUser.cnp" required>
                         </div>
                     </div>
                     <div class="col-12 col-sm-4">
                         <div class="form-outline mb-4">
-                            <input type="text" id="telnumber" pattern="07[3-9][0-9]{7}" class="form-control p-3 input-style" placeholder="Phone Number" required>
+                            <input type="text" pattern="07[3-9][0-9]{7}" class="form-control p-3 input-style" placeholder="Phone Number"
+                                name="phone" [(ngModel)]="newUser.phone" required>
                         </div>
                     </div>
                     <div class="col-12 col-sm-4">
                         <div class="form-outline mb-4">
-                            <input type="text" id="birthdate" pattern="[0-9]" class="form-control p-3 input-style" placeholder="DD/MM/YYYY - Birth Date" required>
+                            <input type="date" class="form-control p-3 input-style" placeholder="DD/MM/YYYY - Birth Date"
+                                name="birthdate" [(ngModel)]="newUser.birthday" required>
                         </div>
                     </div>
                 </div>
@@ -74,7 +85,8 @@
                 <div class="row justify-content-between">
                     <div class="col-12 col-sm-4">
                         <div class="form-outline mb-4">
-                            <input type="text" id="address" class="form-control p-3 input-style" placeholder="Home Address" required>
+                            <input type="text" class="form-control p-3 input-style" placeholder="Home Address"
+                                name="address" [(ngModel)]="newUser.address" required>
                         </div>
                     </div>
                 </div>
@@ -82,7 +94,8 @@
                 <div class="row justify-content-center">
                     <div class="col-12 col-sm-4">
                         <button type="submit" class="btn btn-block mb-2 input-style mb-button"
-                            routerLink="/logged-in-menu">Sign up</button>
+                        (click)="signUp()">Sign up</button>
+                        <br><br>
                     </div>
                 </div>
             </form>
